顯示產品清單

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                    <tr v-for="item in products">
+                        <td>{{ item.title }}</td>
+                        <td>{{ item.origin_price }}</td>
+                        <td>{{ item.price }}</td>
+                        <td>{{ item.is_enabled }}</td>
+                        <td><button type="button" class="btn btn-primary">查看細節</button></td>
                     </tr>
                 </tbody>
             </table>
