--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div id="app">
         <div class="container my-3">
-            <p>目前共有 {{ products.length }} 項產品</p>
-            <table class="table">
+            <p data-aos="fade-right">共有 {{ products.length }} 項商品</p>
+            <table data-aos="zoom-in" class="table">
                 <thead>
                     <tr>
                         <th>產品名稱</th>
@@ -24,6 +24,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- 商品清單 -->
                     <tr v-for="item in products">
                         <td>{{ item.title }}</td>
                         <td>{{ item.origin_price }}</td>
@@ -42,7 +43,7 @@
             </table>
         </div>
 
-        <!-- Modal -->
+        <!-- 商品細項 Modal -->
         <div class="modal fade" id="productDetail" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -72,7 +73,7 @@
                             <!-- 先判斷有該陣列，再判斷其陣列長度 https://blog.csdn.net/qq_40128591/article/details/113680238 -->
                             <ul v-if="temp.imagesUrl && temp.imagesUrl.length > 0" class="row list-unstyled py-2">
                                 <li class="col-md-4 py-2" v-for="(url,num) in temp.imagesUrl">
-                                    <img class="img-fluid" :src="url" :alt=`圖片${num+1}`>
+                                    <img class="img-fluid" :src="url" :alt=`照片${num+1}`>
                                 </li>
                             </ul>
                             <p class="py-2" v-else>沒有其它照片</p>
@@ -84,6 +85,7 @@
     </div>
 
     <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="main.js" type="module"></script>
 </body>
