--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                                 <!-- 商品照片輪播 -->
                                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                                     <div class="carousel-indicators">
-                                        <template v-for="(url,num) in temp.imagesUrl">
+                                        <template v-for="(url,num) in temp.imagesUrl" :key="num">
                                             <button v-if="num == 0" type="button" data-bs-target="#carouselExampleIndicators" :data-bs-slide-to="num" class="active" aria-current="true" :aria-label=`Slide${num+1}`></button>
                                             <button v-else type="button" data-bs-target="#carouselExampleIndicators" :data-bs-slide-to="num" :aria-label=`Slide${num+1}`></button>
                                         </template>
                                     </div>
                                     <div class="carousel-inner">
-                                        <template v-for="(url,num) in temp.imagesUrl">
+                                        <template v-for="(url,num) in temp.imagesUrl" :key="num">
                                             <div v-if="num == 0" class="carousel-item active">
                                                 <img class="w-100" :src="url" :alt=`照片${num+1}`>
                                             </div>
